[gd_scene load_steps=6 format=3 uid="uid://sdeo185qikix"]

[ext_resource type="Texture2D" uid="uid://b65us5i620enf" path="res://Assets/Icons/arrow_upward_64dp_5F6368_FILL0_wght400_GRAD0_opsz48.png" id="1_rod03"]
[ext_resource type="Script" path="res://Scripts/controls_display.gd" id="1_s6vit"]
[ext_resource type="Theme" uid="uid://fifqueo1ohan" path="res://Assets/Themes/UI.tres" id="3_cdj4s"]
[ext_resource type="Texture2D" uid="uid://x7vtpeaj6kbo" path="res://Assets/Icons/arrow_downward_64dp_5F6368_FILL0_wght400_GRAD0_opsz48.png" id="4_3fp4l"]
[ext_resource type="Texture2D" uid="uid://dufoctlf6kpge" path="res://Assets/Icons/play_pause_64dp_5F6368_FILL0_wght400_GRAD0_opsz48.png" id="5_j6r5u"]

[node name="Controls_Display" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s6vit")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/h_separation = 128
columns = 2

[node name="Move_Up_Action" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_rod03")
expand_mode = 3
stretch_mode = 3

[node name="Move_Up_Event" type="Label" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("3_cdj4s")
theme_type_variation = &"Label_Control_Key"
text = "W"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Move_Down_Action" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_3fp4l")
expand_mode = 1
stretch_mode = 3

[node name="Move_Down_Event" type="Label" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("3_cdj4s")
theme_type_variation = &"Label_Control_Key"
text = "S"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pause_Action" type="TextureRect" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_j6r5u")
expand_mode = 1
stretch_mode = 3

[node name="Pause_Event" type="Label" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("3_cdj4s")
theme_type_variation = &"Label_Control_Key"
text = "SPACE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Transition_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="Transition_Timer" to="." method="_on_transition_timer_timeout"]
